--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="sidebar-section">
                 <h2>맵 선택</h2>
                 <ul>
-                    <li data-map="Arena.webp">Arena</li>
+                    <li data-map="Arena.png">Arena</li>
                     <li data-map="Construction.webp">Construction</li>
                     <li data-map="Station.webp">Station</li>
                     <li data-map="Docks.webp">Docks</li>
