Change map image format from webp to png

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 resizeCanvas();
             };
         }
-        setMap("Arena.webp");
+        setMap("Arena.png");
         window.addEventListener('resize', resizeCanvas);
 
         // --- 사이드바 크기 조절 ---
